# Exercicios-C-Felski

./: CMakeLists.txt  bill-calculator.h  burger-calculator.h  calculate-average.h  calculator.h  check-table.h  discover-number.h  fatorial.h  fuel-cost-calculator.h  generate-five-random-numbers.h  get-pair-numbers-from-rand-int-array.h  get-remainder.h  grade-calculator.h  hello-user.h  horse-shoe-calculator.h  is-vogal.h  main-diagonal.h  main.cpp  olá-tudo-bem-times-30.h  percentage-calculator.h  potency.h  show-sequency.h  sum-10-values.h
