cmake_minimum_required(VERSION 3.17)
project(felsky_exercises)

set(CMAKE_CXX_STANDARD 20)

add_executable(felsky_exercises main.cpp show-sequency.h calculate-average.h grade-calculator.h hello-user.h "horse-shoe-calculator.h" percentage-calculator.h bill-calculator.h burger-calculator.h fuel-cost-calculator.h is-vogal.h check-table.h olá-tudo-bem-times-30.h sum-10-values.h discover-number.h potency.h get-remainder.h calculator.h generate-five-random-numbers.h fatorial.h get-pair-numbers-from-rand-int-array.h main-diagonal.h)